--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="header">
         <header id="seção1">
             <a href=".html">
-                <img id="logoHeader" src="Imagens/Logo VerdaVida-250.png" alt="Logo">
+                <img id="logoHeader" src="Logo VerdaVida-250.png" alt="Logo">
             </a>
 
             <nav id="navegação">
